<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/mainmenu"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30sp"
    tools:context=".HallActivity" >

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bWork"
        style="@style/ButtonText"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_margin="20sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/btn_purple"
        android:text="@string/start"
        android:textColor="#FFFE8F"
        android:textSize="36sp" />

    <Button
        android:id="@+id/bSetting"
        style="@style/ButtonText"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_margin="20sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/btn_purple"
        android:text="@string/setting"
        android:textColor="#FFFE8F"
        android:textSize="36sp" />

    <Button
        android:id="@+id/bHelp"
        style="@style/ButtonText"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_margin="20sp"
        android:layout_marginTop="50sp"
        android:background="@drawable/btn_purple"
        android:text="@string/help"
        android:textColor="#FFFE8F"
        android:textSize="36sp" />

</LinearLayout>