<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp" 
    android:background="@drawable/login">

    <LinearLayout
        android:id="@+id/llInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20sp" >

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp" >

            <TextView
                android:id="@+id/tvIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:text="demo.anychat.cn">
				
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp" >

            <TextView
                android:id="@+id/tvPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPort"
                android:layout_marginLeft="5sp"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:text="8906">

            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp" >

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp" >

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_marginLeft="5sp"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:password="true">"

            </EditText>
        </LinearLayout>
    </LinearLayout>
    

    <Button
        android:id="@+id/bLogin"
        style="@style/ButtonText"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:background="@drawable/btn_orange"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" 
        android:visibility="gone"/>

</RelativeLayout>